# secureus-installer

./: INSTALL_WINDOWS.bat  MANIFEST.in  SecureUS_Install.bat  pyproject.toml  secureus.spec  setup.py
secureus_app/: __init__.py  monitor.py
