[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureus"
version = "1.0.7"
description = "SecureUS Network Monitor - desktop app"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.gui-scripts]
secureus-monitor = "secureus_app.monitor:main"

[tool.setuptools]
packages = ["secureus_app"]

[tool.setuptools.package-data]
secureus_app = ["*.py"]
